tests/ui/dyn-compatibility/assoc_type_bounds2.stderr
error[E0191]: the value of the associated type `Bar` in `Foo<()>` must be specified
  --> $DIR/assoc_type_bounds2.rs:10:16
   |
LL |     type Bar
   |     -------- `Bar` defined here
...
LL | fn foo(_: &dyn Foo<()>) {}
   |                ^^^^^^^ help: specify the associated type: `Foo<(), Bar = Type>`

error[E0191]: the value of the associated type `Bar` in `Foo<i32>` must be specified
  --> $DIR/assoc_type_bounds2.rs:11:16
   |
LL |     type Bar
   |     -------- `Bar` defined here
...
LL | fn bar(_: &dyn Foo<i32>) {}
   |                ^^^^^^^^ help: specify the associated type: `Foo<i32, Bar = Type>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0191`.
